--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <table>
                     <tbody>
                         <tr>
-                            <td id="bit" class="border-right">
+                            <td id="bit">
                                 <div class="container">
                                     <span class="date">May 2019 - Present</span>
                                     <img src="assets/images//bit-logo.png" alt="bit-logo">
@@ -39,7 +39,7 @@
                         </tr>
                         <tr>
                             <td class="border-right"></td>
-                            <td id="idgw" class="border-left">
+                            <td id="idgw">
                                 <div class="remark"></div>
                                 <div class="container">
                                     <span class="date">Jan 2019 - March 2019</span>
